fix scrollbar colors

--- a/Catppuccin.theme.css
+++ b/Catppuccin.theme.css
@@ -35,10 +35,10 @@
     --interactive-hover: #C3BAC6 !important;
     --interactive-active: #F5E0DC !important;
     --scrollbar-thin-thumb: #161320 !important;
-    --scrollbar-thin-track: #161320 !important;
+    --scrollbar-thin-track: #302D41 !important;
     --scrollbar-auto-thumb: #161320 !important;
     --scrollbar-auto-track: #302D41 !important;
-    --scrollbar-auto-scrollbar-color-thumb: #302D41 !important;
+    --scrollbar-auto-scrollbar-color-thumb: #161320 !important;
     --scrollbar-auto-scrollbar-color-track: #302D41 !important;
     --deprecated-store-bg: #161320 !important;
 }
